# PyflowVis

./: .gitignore  .gitmodules  ActiveFieldObject.py  AnalyticalFlowCreator.py  EventRegistrar.py  FlowReader.py  ImageLoader.py  LicRenderer.py  LoadConfigRelection.py  NLPCommand.py  Object.py  PlanarManifold.py  VectorField2d.py  VectorfieldOptimization.py  VertexArrayObject.py  VisualizationEngine.py  analytical_optc.py  demo_pinn.py  experiment.py  experiment2.py  flowCreator.py  imgui.ini  install.sh  main.py  mainCommandUI.py  readme.md  requirement.txt  requirements gui.txt  requirements.txt  shaderManager.py  test.py  test_tasks.py  train.py  train_vector_field.py  vis_seg.py
CppModules/: CMakeLists.txt  Demo.py  buildCppModules.bat  example.cpp
CppModules/Pyds/: CppPlugins.py
CppProjects/: CMakeLists.txt
CppProjects/PybindCppModules/: CMakeLists.txt  Demo.py  LicRendering.cpp  buildCppModules.bat  example.cpp
CppProjects/PybindCppModules/Pyds/: CppPlugins.py
CppProjects/include/: VastistasVelocityGenerator.h  VectorFieldCompute.h  commonUtils.h
CppProjects/include/cereal/archives/: json.hpp
CppProjects/src/: ParalleLICrendering.cpp  ParalleLICrendering.h  VastistasVelocityGenerator.cpp  VectorFieldCompute.cpp  colormap_tomPNG.hpp  commonUtils.cpp  flowGenerator.cpp  flowGenerator.h  interactive_observer_explore3d.cpp  main.cpp  observerGenerator.cpp  observerGenerator.h  stablized_texture_512png.cpp  transformation.cpp  transformation.h
CppProjects/src/explore_3d_vector_field/: Discrete3DFlowField.cpp  Discrete3DFlowField.h  IField.cpp  IField.h  IsoSurface.cpp  IsoSurface.h  ReferenceFrame3d.cpp  ReferenceFrame3d.h  ScalarField3D.cpp  ScalarField3D.h  interactive_observed_iso_surface.cpp  interactive_observed_pathline.cpp
DeepUtils/: MiscFunctions.py  ModelZoo.py  NetworkFactory.py  TestClass.py  VastisDataset.py
DeepUtils/dataset/: FTLEDataset.py  SteadyVastisDataset.py  UnsteadyVastisDataset.py  __init__.py  build.py  data_utils.py  rawflowReader.py  vortexVizDataset.py
DeepUtils/dataset/transforms/: __init__.py  basic_transform.py  transforms_factory.py
DeepUtils/loss/: build.py
DeepUtils/models/: __init__.py  build.py
DeepUtils/models/classification/: CnnVortexNet.py  VortexViz.py  __init__.py  cls_base.py
DeepUtils/models/layers/: __init__.py  conv.py  mlp.py
DeepUtils/models/reconstruction/: __init__.py  referenceframeReconstruction.py
DeepUtils/models/segmentation/: MVUnet.py  __init__.py  base_seg.py  line_transformer.py  myPreviousPointTransformer.py  pathline_transformer.py  point_transformers.py  samplingLayers.py  segmentationNetworks.py  (+1 more)
DeepUtils/optim/: optim_factory.py
DeepUtils/scheduler/: scheduler_factory.py  step_lr.py
DeepUtils/utils/: __init__.py  config.py  registry.py
FLowUtils/: AnalyticalFlowCreator.py  FlowReader.py  GlyphRenderer.py  LicRenderer.py  VastisDataset.py  VectorField2d.py  VectorField3d.py  __init__.py  fileMonitor.py  heatStreamPlot.py  interpolation.py  netCDFLoader.py  sampling.py  vortexCriteria.py
FLowUtils/Pyds/: CppLicRenderingModule.pyd  CppPlugins.py
FlowDataAndVisualizationScripts/: FTLEVisualization.ipynb  PathlineVisualization.ipynb
GuiObjcts/: ActiveFieldObject.py  CameraObject.py  Object.py  ObjectGUIReflection.py  __init__.py  mainCommandUI.py
assets/shaders/: colorMap_fragment.glsl  simple_fragment.glsl  simple_vertex.glsl
config/: LoadConfig.py  LoadConfigRelection.py  config.py  config.yaml  default.yaml
config/approximation/: VortexTransformerFTLE.yaml
config/cfgs/: config.yaml  default.yaml  renderingConfig.yaml
config/classification/: vortex_viz.yaml  vortexboundary.yaml  vortexboundary_cnn.yaml  vortexboundary_unet.yaml  vortexnet.yaml
config/referenceframe/: tobias_reference.yaml
config/segmentation/: mvu_net.yaml  pathline_transformer.yaml  pointNNtransformer.yaml  vortexboundary_unet.yaml
ibex_bash/: train.sh
misc/: LBM.py
misc/profile/: profile.txt
profile/: profile.py
shaders/: metal_pbr_fagment.glsl  simple_fragment.glsl  simple_vertex.glsl
(+10 files in other folders)
